# icsync

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/icsync/: __init__.py  cli.py  config.py  importer.py  service.py
src/icsync/templates/: com.icsync.import.plist
